--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <kendo-grid [data]="gridData" [height]="600" [pageable]="false" [sortable]="true" >
+<kendo-grid-column field="section"  title="Section" autoSize="true"> 
+
+</kendo-grid-column>
 <kendo-grid-column field="title" title="Title" ></kendo-grid-column>
 <kendo-grid-column field="url" title="Url"  >
   <ng-template kendoGridCellTemplate let-dataItem>
@@ -9,5 +12,12 @@
 <kendo-grid-column field="published_date"  title="Published Date" autoSize="true"> 
 
 </kendo-grid-column>
+<kendo-grid-column field="media[0].media-metadata[0].url" title="img" >
+ <ng-template kendoGridCellTemplate let-dataItem>
+                     <span><a href="{{dataItem.url}}"><i class="material-icons">link</i></a></span>
+                  
+                </ng-template>
+</kendo-grid-column>
+
 </kendo-grid>
 
