--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,10 @@
 <kendo-grid-column field="published_date"  title="Published Date" autoSize="true"> 
 
 </kendo-grid-column>
-<kendo-grid-column field="media[0].media-metadata[0].url" title="img" >
+<!--kendo-grid-column field="media[0].media-metadata[0].url" title="img" >
   
  
-</kendo-grid-column>
+</kendo-grid-column-->
 
 </kendo-grid>
 
